# hydpy_mpr

./: .gitignore  .pylintrc  MANIFEST.in  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.py
hydpy_mpr/: __init__.py
hydpy_mpr/data/HydPy-H-Lahn/: feature.gpkg
hydpy_mpr/data/HydPy-H-Lahn/config/: calibrators.py  coefficients.py  equations.py  experiment_1.py  experiment_preprocessing.py  experiment_subunit_level.py  initialisers.py  preprocessors.py  regionalisers.py  transformers.py  upscalers.py
hydpy_mpr/data/HydPy-H-Lahn/raster/raster_15km/: bdod_mean_0_100_res15km_gcm3.tif  bdod_mean_0_100_res_15km.tif  bdod_mean_0_200_res15km_gcm3.tif  bdod_mean_0_200_res_15km.tif  clay_mean_0_100_res15km_pct.tif  clay_mean_0_100_res_15km.tif  clay_mean_0_200_res15km_pct.tif  clay_mean_0_200_res_15km.tif  cop_eu_dem_res15km.tif  dh_cop_eu_dem_res15km.tif  element_id.tif  landuse_lbm_res15km.tif  sand_mean_0_100_res15km_pct.tif  sand_mean_0_100_res_15km.tif  sand_mean_0_200_res15km_pct.tif  sand_mean_0_200_res_15km.tif  subunit_id.tif
hydpy_mpr/data/HydPy-H-Lahn/raster/raster_5km/: bdod_mean_0_200_res5km.tif  clay_mean_0_200_res5km.tif  element_id.tif  sand_mean_0_200_res5km.tif
hydpy_mpr/examples/: quick_start.py
hydpy_mpr/source/: calibrating.py  calibration.py  configuration.py  constants.py  equations.py  logging_.py  managing.py  preprocessing.py  reading.py  readutils.py  regionalisation.py  regionalising.py  running.py  transform.py  transforming.py  typing_.py  upscaling.py  upscaling_helpers.pyi  upscaling_helpers.pyx  utilities.py  writing.py
hydpy_mpr/testing/: __init__.py  conftest.py  run_doctests.py  testutils.py
hydpy_mpr/testing/integration/: test_run_script.py  test_workflows.py
hydpy_mpr/testing/unit/: test_raster_calibrating.py  test_raster_equations.py  test_raster_masking.py  test_raster_transforming.py  test_raster_upscaling.py  test_read_feature.py  test_read_mapping_table.py  test_read_raster.py  test_transforming.py
hydpy_mpr/tests/: run_doctests.py
