[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-magic-trailing-comma = true
exclude = "hydpy_mpr/testing/iotesting"

[tool.pylint.main]
allow-wildcard-with-all = true

[tool.pylint.messages_control]
disable = [
    "cyclic-import",
    "missing-docstring",
    "too-few-public-methods",
    "unused-wildcard-import",
]

[tool.pytest.ini_options]
testpaths = ["hydpy_mpr/testing"]
