[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-magic-trailing-comma = true
exclude = "hydpy_mpr/testing/iotesting"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = "iotesting"

[[tool.mypy.overrides]]
module = ["hydpy_mpr.source.*", "hydpy_mpr.testing.*"]
enable_error_code = "explicit-override"

[tool.pylint.main]
allow-wildcard-with-all = true

[tool.pylint.messages_control]
disable = [
    "cyclic-import",
    "missing-docstring",
    "too-few-public-methods",
    "unused-wildcard-import",
]

[tool.pytest.ini_options]
testpaths = ["hydpy_mpr/testing"]
