[build-system]
requires = ["cython", "numpy", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-magic-trailing-comma = true
exclude = "hydpy_mpr/testing/iotesting"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = "iotesting"

[[tool.mypy.overrides]]
module = ["hydpy_mpr.source.*", "hydpy_mpr.testing.*"]
enable_error_code = "explicit-override"

[tool.pylint.main]
allow-wildcard-with-all = true

[tool.pylint.messages_control]
disable = [
    "cyclic-import",  # unnecessary
    "fixme",  # ToDo
    "missing-docstring",  # ToDo
    "too-few-public-methods",  # unnecessary
    "too-many-ancestors",  # unnecessary
    "too-many-instance-attributes",  # unnecessary
    "unexpected-keyword-arg",  # buggy in combination with some data classes
    "unused-wildcard-import",  # to allow `from hydpy_mpr.source.typing_ import *`
]

[tool.pytest.ini_options]
testpaths = ["hydpy_mpr/testing"]
